<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Fedilab</string>
    <string name="action_cache">Cache</string>
    <string name="text_size">Text sizes</string>
    <string name="icon_size">Icon sizes</string>
    <string name="emoji_size">Custom emoji sizes</string>
    <string name="drafts">Drafts</string>
    <string name="follow_request">Follow requests</string>
    <string name="settings">Settings</string>
    <string name="settings_title_custom_sharing">Custom sharing</string>
    <string name="settings_custom_sharing_url">Your custom sharing URL…</string>
    <string name="custom_tabs">In-app browser</string>
    <string name="set_capitalize">First letter in capital for replies</string>
    <string name="set_resize_picture">Resize pictures</string>
    <string name="v_public">Public</string>
    <string name="v_unlisted">Unlisted</string>
    <string name="v_private">Private</string>
    <string name="v_direct">Direct</string>
    <string name="action_lists">Lists</string>
    <string name="set_share_details">Add message details when sharing</string>
    <string name="filters">Filters</string>
    <string name="set_display_emoji">Use Emoji One</string>
    <string name="set_retrieve_metadata_share_from_extras">Attach an image when sharing a URL</string>
    <string name="reorder_timelines">Manage timelines</string>
    <string name="set_forward_tags">Forward tags in replies</string>
    <string name="administration">Administration</string>
    <string name="set_capitalize_indication">Automatically insert a line break after the mention to capitalize the first letter</string>
    <string name="settings_title_custom_sharing_indication">Allow content creators to share statuses to their RSS feeds</string>
    <string name="set_enable_crash_report">Enable crash reports</string>
    <string name="set_enable_crash_report_indication">If enabled, a crash report will be created locally and then you will be able to share it.</string>
    <string name="set_clear_cache_exit">Clear cache when leaving</string>
    <string name="set_clear_cache_exit_indication">The cache (media, cached messages, data from the built-in browser) will be automatically cleared when leaving the application.</string>
    <string name="set_unfollow_validation">Show confirmation dialog before unfollowing</string>
    <string name="set_resize_picture_indication">Allow to compress large photos into smaller sized photos with very less or negligible loss in quality of the image.</string>
    <string name="set_watermark">Watermarks</string>
    <string name="set_watermark_indication">Automatically add a watermark at the bottom of pictures. The text can be customized for each account.</string>
    <string name="interactions">Interactions</string>
    <string name="scheduled">Scheduled</string>
    <string name="SET_SEND_CRASH_REPORTS" translatable="false">SET_SEND_CRASH_REPORTS</string>
    <string name="SET_DISABLE_RELEASE_NOTES_ALERT" translatable="false">SET_DISABLE_RELEASE_NOTES_ALERT</string>
    <string name="SET_PICTURE_COMPRESSED" translatable="false">SET_PICTURE_COMPRESSED</string>
    <string name="SET_FORWARD_TAGS_IN_REPLY" translatable="false">SET_FORWARD_TAGS_IN_REPLY</string>
    <string name="SET_CLEAR_CACHE_EXIT" translatable="false">SET_CLEAR_CACHE_EXIT</string>
    <string name="SET_DISPLAY_EMOJI" translatable="false">SET_DISPLAY_EMOJI</string>
    <string name="SET_MANDATORY_ALT_TEXT" translatable="false">SET_MANDATORY_ALT_TEXT</string>
    <string name="SET_MANDATORY_ALT_TEXT_WARN" translatable="false">SET_MANDATORY_ALT_TEXT_WARN</string>
    <string name="SET_RETRIEVE_METADATA_IF_URL_FROM_EXTERAL" translatable="false">SET_RETRIEVE_METADATA_IF_URL_FROM_EXTERAL</string>
    <string name="SET_UNFOLLOW_VALIDATION" translatable="false">SET_UNFOLLOW_VALIDATION</string>
    <string name="SET_USE_SINGLE_TOPBAR" translatable="false">SET_USE_SINGLE_TOPBAR</string>
    <string name="SET_DISABLE_TOPBAR_SCROLLING" translatable="false">SET_DISABLE_TOPBAR_SCROLLING</string>
    <string name="SET_AUTO_HIDE_COMPOSE" translatable="false">SET_AUTO_HIDE_COMPOSE</string>
    <string name="SET_DISPLAY_COUNTERS" translatable="false">SET_DISPLAY_COUNTERS</string>
    <string name="SET_DISPLAY_COMPACT_ACTION_BUTTON" translatable="false">SET_DISPLAY_COMPACT_ACTION_BUTTON</string>
    <string name="SET_TIMELINES_IN_A_LIST" translatable="false">SET_TIMELINES_IN_A_LIST</string>
    <string name="SET_CAPITALIZE" translatable="false">SET_CAPITALIZE</string>
    <string name="SET_MENTIONS_AT_TOP" translatable="false">SET_MENTIONS_AT_TOP</string>
    <string name="SET_MENTION_BOOSTER" translatable="false">SET_MENTION_BOOSTER</string>
    <string name="SET_THREAD_MESSAGE" translatable="false">SET_THREAD_MESSAGE</string>
    <string name="SET_CUSTOMIZE_COLORS_VISIBILITY" translatable="false">SET_CUSTOMIZE_COLORS_VISIBILITY</string>
    <string name="SET_COLOR_VISIBILITY_PUBLIC" translatable="false">SET_COLOR_VISIBILITY_PUBLIC</string>
    <string name="SET_COLOR_VISIBILITY_UNLISTED" translatable="false">SET_COLOR_VISIBILITY_UNLISTED</string>
    <string name="SET_COLOR_VISIBILITY_PRIVATE" translatable="false">SET_COLOR_VISIBILITY_PRIVATE</string>
    <string name="SET_COLOR_VISIBILITY_DIRECT" translatable="false">SET_COLOR_VISIBILITY_DIRECT</string>
    <string name="SET_SHARE_DETAILS" translatable="false">SET_SHARE_DETAILS</string>
    <string name="SET_CUSTOM_SHARING" translatable="false">SET_CUSTOM_SHARING</string>
    <string name="SET_CUSTOM_SHARING_URL" translatable="false">SET_CUSTOM_SHARING_URL</string>
    <string name="SET_LOGO_LAUNCHER" translatable="false">SET_LOGO_LAUNCHER</string>
    <string name="SET_FONT_SCALE_INT" translatable="false">SET_FONT_SCALE_INT</string>
    <string name="SET_FONT_SCALE_ICON_INT" translatable="false">SET_FONT_SCALE_ICON_INT</string>
    <string name="SET_EMOJI_SCALE_INT" translatable="false">SET_EMOJI_SCALE_INT</string>
    <string name="SET_REMOVE_LEFT_MARGIN" translatable="false">SET_REMOVE_LEFT_MARGIN</string>
    <string name="SET_PROFILE_IMAGE_SHAPE" translatable="false">SET_PROFILE_IMAGE_SHAPE</string>
    <string name="SET_PROFILE_REMOTELY" translatable="false">SET_PROFILE_REMOTELY</string>
    <string name="SET_CONVERSATION_REMOTELY" translatable="false">SET_CONVERSATION_REMOTELY</string>
    <string name="SET_WATERMARK" translatable="false">SET_WATERMARK</string>
    <string name="SET_UNLISTED_REPLIES" translatable="false">SET_UNLISTED_REPLIES</string>
    <string name="SET_COLORIZE_FOR_VISIBILITY" translatable="false">SET_COLORIZE_FOR_VISIBILITY</string>
    <string name="SET_SELECTED_LANGUAGE" translatable="false">SET_SELECTED_LANGUAGE</string>
    <string name="SET_WATERMARK_TEXT" translatable="false">SET_WATERMARK_TEXT</string>
    <string name="SET_MATHS_COMPOSER" translatable="false">SET_MATHS_COMPOSER</string>
    <string name="SET_USE_CACHE" translatable="false">SET_USE_CACHE</string>
    <string name="SET_CUSTOM_TABS" translatable="false">SET_CUSTOM_TABS</string>
    <string name="visibility_color_public">Color for the public visibility</string>
    <string name="visibility_color_unlisted">Color for the unlisted visibility</string>
    <string name="visibility_color_private">Color for the private visibility</string>
    <string name="visibility_color_direct">Color for the direct visibility</string>
    <string name="set_unfollow_validation_title">Confirm unfollows</string>
    <string name="display">Display</string>
    <string name="navigation">Navigation</string>
    <string name="behavior">Behavior</string>
    <string name="system">System</string>
    <string name="set_single_topbar_title">Single action bar</string>
    <string name="set_disable_topbar_scrolling_title">Disable top bar scrolling</string>
    <string name="set_audo_hide_compose_title">Auto hide compose button</string>
    <string name="set_audo_hide_compose_summary">Automatically hide compose button when scrolling up on a timeline</string>
    <string name="set_single_topbar">When enabled, the app will only have a single bar for timelines</string>
    <string name="set_timelines_in_a_list_title">Timelines in a list</string>
    <string name="set_timelines_in_a_list">When enabled, all pinned timelines will be displayed in a drop-down menu</string>
    <string name="set_use_cache">Use cache</string>
    <string name="set_use_cache_indication">Timelines will be cached so the application will be faster.</string>
    <string name="set_display_counters">Display counters</string>
    <string name="set_display_counters_description">Will display a bubble counter in tab timelines for new messages</string>
    <string name="pickup_logo">Pickup a logo</string>
    <string name="change_logo">Change logo</string>
    <string name="change_logo_description">Change the logo of the app on your device</string>
    <string name="set_colorize_visibility">Underline visibility</string>
    <string name="set_colorize_visibility_indication">The visibility button and the bottom of the compose area will have different colors depending of the visibility selected when composing.</string>
    <string name="set_unlisted_replies">Unlisted replies</string>
    <string name="set_unlisted_replies_indication">It only concerns \"public\" replies. When enabled, your replies will automatically have the visibility \"unlisted\" instead of \"public\"</string>
    <string name="set_language_picker_title">Languages in picker</string>
    <string name="set_language_picker">Allow to reduce the list of languages in the picker when composing a message.</string>
    <string name="thread_long_message">Divide long messages in replies</string>
    <string name="set_custom_colors_visibility">Set custom colors for the visibility</string>
    <string name="set_remove_left_margin_title">Remove left margin</string>
    <string name="set_remove_left_margin">Remove the left margin in timelines to make messages more compact</string>
    <string name="set_remote_profile_title">Remote profiles</string>
    <string name="set_remote_conversation_title">Conversations</string>
    <string name="set_remote_profile">The app will display publicly profiles to get all messages. Interactions will need an extra step to federate messages.</string>
    <string name="set_remote_conversation">The app will display publicly conversations to get all messages. Interactions will need an extra step to federate messages.</string>
    <string name="set_profile_image_shape">Profile image shape</string>
    <string name="set_display_compact_buttons">Compact action buttons</string>
    <string name="set_display_compact_buttons_description">Buttons at the bottom of messages will not take the whole width</string>
    <string name="set_disable_release_notes">Disable release notes</string>
    <string name="set_disable_release_notes_indication">When a new version is published, you will not be alerted inside the app.</string>
    <string name="set_maths_support">Write formula</string>
    <string name="set_mention_at_top">Mentions at the top</string>
    <string name="set_mention_at_top_indication">When replying mentions will all be added to the beginning of the message</string>
    <string name="set_mention_booster">Mention the booster</string>
    <string name="set_mention_booster_indication">When replying to a boost, the person who boosted will be mentioned in the reply</string>
    <string name="set_alt_text_mandatory">Mandatory media descriptions</string>
    <string name="set_alt_text_mandatory_description">The message will not be sent if a description is missing with a media</string>
    <string name="set_alt_text_mandatory_warn">Warn only</string>
    <string name="set_alt_text_mandatory_description_warn">If there are missing media a dialog will be displayed with the ability to send the message without media description</string>
</resources>